--- a/index.html
+++ b/index.html
@@ -56,10 +56,23 @@
         <h3>Who am I?</h3>
 I am a motivated student with a background in <a id="physics" href="#physics">Physics</a> and <a id="cs" href="#cs">Computer Science</a> interested in Data Mining and Robotics. I am also interested in designing and programming Embedded Systems.
 
-        <h3>Why Data Mining, Robotics or Embedded Systems?</h3>
 
-        <h3>What Skills Do I have?</h3>
+        <h3>Why Data Mining, Robotics or Embedded Systems?</h3>
+<p>For the past half century we have been making our lives easier with computers, we have even attempted to make computers think the way we do to solve complex problems (i.e. Artificial Intelligence). In the 1970s Computer Scientists have promised robots in our homes by now, but they have very much underestimated the complexity in achieving that goal, as Moravec once said:</p>
+
+        <div class="quote">
+        "We are all prodigious Olympians in perceptual and motor areas, so good that we make the difficult look easy. Abstract thought, though, is a new trick, perhaps less than 100 thousand years old. We have not yet mastered it. It is not all that intrinsically difficult; it just seems so when we do it."
+        </div>
+
+<p>I believe Data Mining is one approach in making robots or intelligence systems more intelligent. Data Mining is all about finding patterns in data and creating models that predicts the outcome under new conditions, but which model is the <b><i>best</i></b> remains to be undefined.</p>
+
+<p>However if one were able to define <b><i>the best</i></b> model, that in turn allows the intelligent system to <b><i>think</i></b> for it-self and choose freely. This is contrary to the traditional <u>static</u> intelligent systems, where the decision making is done by a collection of predefine algorithms, to the <u>dynamic</u> Data Mining approach I envision.</p> 
+
+<p>With the Data Mining approach, I hope to apply to Robotics thus this explains my interest in Robotics and Embedded Systems.</p>
+
+        <h3>What Tools Do I Use?</h3>
         <img id="skills" width="100%" src="imgs/skills_collage.png" alt="skills" />
+
 
         <h3>Current Projects:</h3>
         <ul id="projects">
@@ -67,7 +80,10 @@ I am a motivated student with a background in <a id="physics" href="#physics">Ph
 <li class="mineframe"><a href="https://github.com/chutsu/mineframe">Mineframe</a>: is a data mining framework written in Python and uses R to perform most of the statistical and machine learning operations, with the aim to automate most of the data mining processes.</li>
             <li class="mineview"><a href="https://github.com/chutsu/mineframe">Mineview</a>: is a web-based interface meant to be used on top of mineframe.</li>
         </ul>
+
+
         <h3>How to Reach Me?</h3>
+<center>chutsu (at) gmail.com</center>
     </section>
     <section id="archdoc">
         
