edited the last paragraph of the why section

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ I am a motivated student with a background in <a id="physics" href="#physics">Ph
 
 <p>However if one were able to define <b><i>the best</i></b> model, that in turn allows the intelligent system to <b><i>think</i></b> for it-self and choose freely. This is contrary to the traditional <u>static</u> intelligent systems, where the decision making is done by a collection of predefine algorithms, to the <u>dynamic</u> Data Mining approach I envision.</p> 
 
-<p>With the Data Mining approach, I hope to apply to Robotics thus this explains my interest in Robotics and Embedded Systems.</p>
+<p>With the Data Mining approach, I hope to build a Robot capable of exhibiting human like behaviour. This is my reason for taking an interest in Robotics and Embedded Systems.</p>
 
         <h3>What Tools Do I Use?</h3>
         <img id="skills" width="100%" src="imgs/skills_collage.png" alt="skills" />
