--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </section>
     <section id="about">
         <h3>Who am I?</h3>
-I am a motivated student with a background in <a id="physics" href="#physics">Physics</a> and <a id="cs" href="#cs">Computer Science</a> interested in Data Mining and Robotics. I am also interested in designing and programming Embedded Systems.
+My name is Chris Choi, I am a motivated student with a background in <a id="physics" href="#physics">Physics</a> and <a id="cs" href="#cs">Computer Science</a> interested in Data Mining and Robotics. I am also interested in designing and programming Embedded Systems.
 
 
         <h3>Why Data Mining, Robotics or Embedded Systems?</h3>
