updated presentation isgc-2013

--- a/presentations/isgc-2013/index.html
+++ b/presentations/isgc-2013/index.html
@@ -107,7 +107,7 @@
 <body class="list">
 	<header class="caption">
 		<h1>Twirp: A Twitter Mining Workbench and experiences with NoSQL Databases</h1>
-        <p>By Alex Voss and Chris Choi</p>
+        <p>By Chris Choi and Alex Voss</p>
         <p>University of St Andrews</p>
 	</header>
 
@@ -581,8 +581,8 @@
             <h2 style="margin-top: 10%;">To Recap on Everthing</h2>
             <ul>
                 <li>We are working on <b>Twirp</b> (Twitter Mining workbench)</li>
-                <li>If your datasize is < 1TB, scaling vertically is better</li>
-                <li>Not all analytical algorithms can be mapped onto a MapReduce query (used by most NoSQL databases to perform analytics)</li>
+                <li>If your datasize is <b>< 1TB</b>, it is better <b>scale vertically<</b>/li>
+                <li><b>Not all analytical algorithms can be mapped onto a MapReduce query </b>(used by most NoSQL databases to perform analytics)</li>
             </ul>
         </div>
     </section>
