--- a/presentations/isgc-2013/index.html
+++ b/presentations/isgc-2013/index.html
@@ -581,7 +581,7 @@
             <h2 style="margin-top: 10%;">To Recap on Everthing</h2>
             <ul>
                 <li>We are working on <b>Twirp</b> (Twitter Mining workbench)</li>
-                <li>If your datasize is <b>< 1TB</b>, it is better <b>scale vertically</b>/li>
+                <li>If your datasize is <b>< 1TB</b>, it is better <b>scale vertically</b></li>
                 <li><b>Not all analytical algorithms can be mapped onto a MapReduce query </b>(used by most NoSQL databases to perform analytics)</li>
             </ul>
         </div>
