updated presentation and index page

--- a/presentations/isgc-2013/index.html
+++ b/presentations/isgc-2013/index.html
@@ -326,9 +326,6 @@
                 <li>Query</li>
                 <li>Perform Simple Analytics</li>
             </ul>
-            <center>
-                <p>On Twitter Tweets</p>
-            </center>
         </div>
     </section>
 
@@ -571,10 +568,24 @@
             <h1>Scaling Summary</h1>
             <h2>Additionally . . .</h2>
             <div>
-                <p style="font-size: 0.5em;">Most algorithms are <b>not compatible</b> with <i>MapReduce</i>, meaning NoSQL databases such as <u>Hadoop</u>, <u>MongoDB</u> and <u>Couchbase</u>, may not be the best choice for analytics</p>
+<p style="font-size: 0.5em;"><b>Some sequential algorithms</b> are <b>not compatible</b> with <b><i>MapReduce</i></b>. Meaning NoSQL databases such as <u>Hadoop</u>, <u>MongoDB</u> and <u>Couchbase</u> which uses MapReduce may not be the best choice for <i>certain</i> analytics</p>
             </div>
         </div>
     </section>
+
+    <section class="slide">
+        <div>
+            <h2 style="margin-top: 10%;">Future Work</h2>
+            <div>
+                <ul style="margin-top: 1%;">
+                    <li>Investigate the limitations of MapReduce for Twitter Analytics</li>
+                    <li>Perform more complex queries to compare NoSQL databases for Twirp</li>
+                    <li>Factors that determine a single machine isn't enough</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
 
     <section class="slide">
         <div>
