Fix absolute paths to relative paths in notes html files

--- a/notes/physics/electrodynamics/characteristics_of_a_solenoid.html
+++ b/notes/physics/electrodynamics/characteristics_of_a_solenoid.html
@@ -1,21 +1,19 @@
-<!DOCTYPE>
+<!DOCTYPE DOCTYPE>
+
 <html>
 <head>
-    <meta content="text/html" charset="UTF-8" http-equiv="Content-Type" />
-
-    <!-- MATHJAX -->
-    <script type="text/x-mathjax-config">
+<meta charset="utf-8" content="text/html" http-equiv="Content-Type"/>
+<!-- MATHJAX -->
+<script type="text/x-mathjax-config">
         MathJax.Hub.Config({
             tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]},
             TeX: { equationNumbers: { autoNumber: "AMS" }}
         });
     </script>
-    <script type="text/javascript"
-        src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
-    </script>
-
-    <!-- CSS -->
-    <style type="text/css">
+<script src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript">
+</script>
+<!-- CSS -->
+<style type="text/css">
         body {
             width: 550px;
             margin-left: auto;
@@ -68,7 +66,7 @@
 <li><strong>I</strong>: current through the solenoid</li>
 <li><strong>T</strong>: turns of the winding per cm of length</li>
 </ul>
-<p><img alt="Solenoid and Plunger" src="images/solenoid_design.png" /></p>
+<p><img alt="Solenoid and Plunger" src="./images/solenoid_design.png"/></p>
 <p>Let $N_1$ and $S_1$ represent the respecitive pole strengths, and $S_2$ $N_2$ represent a soft-iron plunger in Fig. 1.</p>
 <h3>General Behaviour</h3>
 <p>If the plunger is brought from a distance towards the coil as in Fig. 1., a gradually increasing force of attraction will be exerted between them, similar to the force of attraction between a piece of iron and a common magnet. When the plunger is entirely outside the solenoid, it will be a magnet by induced effect of the winding carrying current; the attractive forces, however, in this position would not be great, because the pole strengths by induction are relatively of small magnitude.</p>
