--- a/notes/physics/electrodynamics/design_of_solenoids.html
+++ b/notes/physics/electrodynamics/design_of_solenoids.html
@@ -1,21 +1,19 @@
-<!DOCTYPE>
+<!DOCTYPE DOCTYPE>
+
 <html>
 <head>
-    <meta content="text/html" charset="UTF-8" http-equiv="Content-Type" />
-
-    <!-- MATHJAX -->
-    <script type="text/x-mathjax-config">
+<meta charset="utf-8" content="text/html" http-equiv="Content-Type"/>
+<!-- MATHJAX -->
+<script type="text/x-mathjax-config">
         MathJax.Hub.Config({
             tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]},
             TeX: { equationNumbers: { autoNumber: "AMS" }}
         });
     </script>
-    <script type="text/javascript"
-        src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
-    </script>
-
-    <!-- CSS -->
-    <style type="text/css">
+<script src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript">
+</script>
+<!-- CSS -->
+<style type="text/css">
         body {
             width: 550px;
             margin-left: auto;
@@ -60,8 +58,8 @@
 <h1>The Design of Solenoid Electromagnets</h1>
 <p>The design of the electrical portion of a solenoid may be divided into the following main sections:</p>
 <ul>
-<li><a href="characteristics_of_a_solenoid.html">consideration to the characteristics of a solenoid</a></li>
-<li><a href="solenoid_design-winding_efficiency.html">solenoid winding efficiency</a></li>
+<li><a href="./characteristics_of_a_solenoid.html">consideration to the characteristics of a solenoid</a></li>
+<li><a href="./solenoid_design-winding_efficiency.html">solenoid winding efficiency</a></li>
 </ul>
 </body>
 </html>
