--- a/notes/physics/electrodynamics/electric_field.html
+++ b/notes/physics/electrodynamics/electric_field.html
@@ -1,21 +1,19 @@
-<!DOCTYPE>
+<!DOCTYPE DOCTYPE>
+
 <html>
 <head>
-    <meta content="text/html" charset="UTF-8" http-equiv="Content-Type" />
-
-    <!-- MATHJAX -->
-    <script type="text/x-mathjax-config">
+<meta charset="utf-8" content="text/html" http-equiv="Content-Type"/>
+<!-- MATHJAX -->
+<script type="text/x-mathjax-config">
         MathJax.Hub.Config({
             tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]},
             TeX: { equationNumbers: { autoNumber: "AMS" }}
         });
     </script>
-    <script type="text/javascript"
-        src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
-    </script>
-
-    <!-- CSS -->
-    <style type="text/css">
+<script src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript">
+</script>
+<!-- CSS -->
+<style type="text/css">
         body {
             width: 550px;
             margin-left: auto;
@@ -63,6 +61,6 @@
     E = \frac{F}{q_{0}}
 \end{equation}</p>
 <p><strong>Note</strong>: $E$ is external to $q_0$. It's not produced by $q_0$.</p>
-<p><img alt="Electric fields" src="images/electric_fields.gif" /></p>
+<p><img alt="Electric fields" src="./images/electric_fields.gif"/></p>
 </body>
 </html>
