--- a/notes/physics/electrodynamics/solenoid_design-winding_efficiency.html
+++ b/notes/physics/electrodynamics/solenoid_design-winding_efficiency.html
@@ -1,21 +1,19 @@
-<!DOCTYPE>
+<!DOCTYPE DOCTYPE>
+
 <html>
 <head>
-    <meta content="text/html" charset="UTF-8" http-equiv="Content-Type" />
-
-    <!-- MATHJAX -->
-    <script type="text/x-mathjax-config">
+<meta charset="utf-8" content="text/html" http-equiv="Content-Type"/>
+<!-- MATHJAX -->
+<script type="text/x-mathjax-config">
         MathJax.Hub.Config({
             tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]},
             TeX: { equationNumbers: { autoNumber: "AMS" }}
         });
     </script>
-    <script type="text/javascript"
-        src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
-    </script>
-
-    <!-- CSS -->
-    <style type="text/css">
+<script src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript">
+</script>
+<!-- CSS -->
+<style type="text/css">
         body {
             width: 550px;
             margin-left: auto;
@@ -58,7 +56,7 @@
 </head>
 <body>
 <h1>Solenoid Design: Winding Efficiency</h1>
-<p><img alt="Efficiency of the Winding" src="images/solenoid_design_2.png" /></p>
+<p><img alt="Efficiency of the Winding" src="./images/solenoid_design_2.png"/></p>
 <h2>Wind Space Efficiency</h2>
 <h3>In 2-Dimensions</h3>
 <p>In the following, we discuss the wind's space efficiency of a coil given a specific area.</p>
@@ -84,7 +82,6 @@
 
 The number $0.785$ is the packing efficiency $P.E.$ of a square lattice of four circles (unit cell). Where $P.E = \pi r^{2} / (2r)^{2} = \pi / 4 = 0.7854$. For a theoretically efficient wind, the value of $k$ is approximately $0.9$ and efficiency about $0.87$.
 </div>
-
 <h3>In 3-Dimensions</h3>
 <p>Taking the the above even further and considering the efficiency in <strong>3-dimensions</strong>, lets assume:</p>
 <div>
@@ -102,25 +99,23 @@ The number $0.785$ is the packing efficiency $P.E.$ of a square lattice of four 
 
 \begin{equation}
     \begin{aligned}
-    \text{Volume of wire in winding } V & = \\
-    V & = \pi L \{ (M + P)^{2} - P^{2} \} \frac{\pi}{4k} \\
-    V & = \frac{\pi^{2}}{4 k} LM (M + 2P)
+    \text{Volume of wire in winding } V &amp; = \\
+    V &amp; = \pi L \{ (M + P)^{2} - P^{2} \} \frac{\pi}{4k} \\
+    V &amp; = \frac{\pi^{2}}{4 k} LM (M + 2P)
     \end{aligned}
 \end{equation}
 </div>
-
 <p><strong>Note</strong>: the volume of the wire in winding works out the full volume of the winding, regardless of wasted space. Then it is multiplied by the <em>packing efficiency</em> $P.E.$ previously worked out $\frac{\pi}{4}$, and also multipled by $\frac{1}{k}$ because as the winding efficiency $k$ increases the volume decreases; $k$ is inversely proportional to $V$. Now that we know the volume of the wire in the winding we can obtain the length.</p>
 <div>
 \begin{equation}
     \begin{aligned}
-    \text{Length of wire in winding} & = \frac{\text{Volume of wire in winding}}{\text{Section area by a turn of wire}} \\
-        & = \frac{\pi^{2}}{4k} LM(M + 2P)/\frac{\pi d^{2}}{4} \\
-        & = \frac{\pi}{k} \frac{LM(M + 2P)}{d^{2}} \\
-        & = \pi T (M + 2P)
+    \text{Length of wire in winding} &amp; = \frac{\text{Volume of wire in winding}}{\text{Section area by a turn of wire}} \\
+        &amp; = \frac{\pi^{2}}{4k} LM(M + 2P)/\frac{\pi d^{2}}{4} \\
+        &amp; = \frac{\pi}{k} \frac{LM(M + 2P)}{d^{2}} \\
+        &amp; = \pi T (M + 2P)
 \end{aligned}
 \end{equation}
 </div>
-
 <h3>References</h3>
 <p>Higgs, P.J. The Design of Solenoid Electromagnets. (1925). J. Sci. Instrum. Vol.2 No.10.</p>
 </body>
