--- a/notes/physics/electrodynamics/what_is_the_difference_between_permeability_and_permittivity.html
+++ b/notes/physics/electrodynamics/what_is_the_difference_between_permeability_and_permittivity.html
@@ -1,21 +1,19 @@
-<!DOCTYPE>
+<!DOCTYPE DOCTYPE>
+
 <html>
 <head>
-    <meta content="text/html" charset="UTF-8" http-equiv="Content-Type" />
-
-    <!-- MATHJAX -->
-    <script type="text/x-mathjax-config">
+<meta charset="utf-8" content="text/html" http-equiv="Content-Type"/>
+<!-- MATHJAX -->
+<script type="text/x-mathjax-config">
         MathJax.Hub.Config({
             tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]},
             TeX: { equationNumbers: { autoNumber: "AMS" }}
         });
     </script>
-    <script type="text/javascript"
-        src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
-    </script>
-
-    <!-- CSS -->
-    <style type="text/css">
+<script src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript">
+</script>
+<!-- CSS -->
+<style type="text/css">
         body {
             width: 550px;
             margin-left: auto;
@@ -60,8 +58,8 @@
 <h2>What is the difference between permeability and permittivity?</h2>
 <p>In short:</p>
 <ul>
-<li><strong><a href="permeability.html">Permeability</a></strong> ($\mu$) applies to <strong>magnetic fields</strong></li>
-<li><strong><a href="permittivity.html">Permittivity</a></strong> ($\epsilon$) applies to <strong>electric fields</strong></li>
+<li><strong><a href="./permeability.html">Permeability</a></strong> ($\mu$) applies to <strong>magnetic fields</strong></li>
+<li><strong><a href="./permittivity.html">Permittivity</a></strong> ($\epsilon$) applies to <strong>electric fields</strong></li>
 </ul>
 </body>
 </html>
