Add december blog posts from tumblr

--- a/about.html
+++ b/about.html
@@ -80,6 +80,7 @@
             width: 90%;
             margin-left: auto;
             margin-right: auto;
+            margin-bottom: 20px;
         }
 
         ul.list {
@@ -295,8 +296,21 @@
                 <a href="http://chutsu.github.com/presentations/isgc-2013">
                     Twirp: a Twitter Mining Workbench, and experiences with NoSQL databases
                 </a>.
-                Presented at the International Symposium on Grids and Clouds
-                (ISGC), Taipei, Taiwan.
+                Presented at the
+                <a href="http://event.twgrid.org/isgc2013/">
+                    International Symposium on Grids and Clouds (ISGC), Taipei,
+                    Taiwan
+                </a>.
+            </li>
+            <li class="listing">
+                Voss, A. & <b class="author">Choi, C</b>. (2013, Janurary).
+                <a href="http://chutsu.github.com/presentations/nosql_db-2013/nosql_db.pdf">
+                    Benchmarking MongoDB and Couchbase No-SQL Databases
+                </a>.
+                Presented in <a href="http://www.jisc.ac.uk">JISC</a> (London), an internal
+                face to face meeting with the <a href="http://www.analyzingsocialmedia.org">
+                    Analysing Social Media Collaboration
+                </a>.
             </li>
         </ul>
     </section> <!-- end of about -->
