--- a/projects.html
+++ b/projects.html
@@ -54,7 +54,6 @@
 
         ul#projects {
             text-align: left;
-            margin-top: 20px;
         }
 
         ul#projects li {
@@ -81,6 +80,7 @@
             width: 90%;
             margin-left: auto;
             margin-right: auto;
+            margin-bottom: 20px;
         }
 
         ul.list {
