Update website theme and Add feburary posts

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
         }
 
         body {
-            width: 500px;
+            width: 700px;
             margin-left: auto;
             margin-right: auto;
             margin-top: 50px;
@@ -111,7 +111,7 @@
 
         h1, h2, h3 {
             margin-top: 20px;
-            margin-bottom: 0;
+            margin-bottom: 10px;
             color: #222;
         }
 
@@ -128,8 +128,7 @@
         }
 
         a:link, a:visited {
-            color: #104E8B;
-            font-size: 16px;
+            color: #0e73d6;
             font-weight: bold;
             text-decoration: none;
         }
@@ -162,17 +161,21 @@
 
         section {
             clear: both;
-            margin-top: 30px;
+            margin-top: 50px;
         }
 
         section#blog {
-            clear: both;
             margin-top: 30px;
+        }
+
+        section#about {
+            width: 550px;
+            margin-left: auto;
+            margin-right: auto;
         }
 
         section.post {
             font-size: 1em;
-
         }
 
         img {
@@ -238,10 +241,12 @@
     </nav>
 
     <section id="about">
-        <h3>Who am I?</h3>
-        <p>My name is Chris Choi, I am a motivated student with a background in
-        Physics and Computer Science interested in data mining and robotics. In
-        specific, attempt to apply data mining techniques to robotics.</p>
+        <h3>About me?</h3>
+        <p>I am a Phd student at
+        <a href="http://www.st-andrews.ac.uk">University of St. Andrews</a>
+        (Scotland), interested in <b><i>Data Mining</i></b> and
+        <b><i>Robotics</i></b>. In particular, attempt to apply data mining
+        techniques to robotics.</p>
 
         <h3>Education</h3>
         <ul class="list">
