--- a/projects.html
+++ b/projects.html
@@ -12,12 +12,13 @@
         }
 
         body {
-            width: 500px;
+            width: 700px;
             margin-left: auto;
             margin-right: auto;
             margin-top: 50px;
             text-align: justify;
             font-family: Verdana, Arial;
+            color: #333;
         }
 
         nav ul {
@@ -54,6 +55,7 @@
 
         ul#projects {
             text-align: left;
+            margin-top: 20px;
         }
 
         ul#projects li {
@@ -102,7 +104,7 @@
             margin-top: 5px;
             margin-bottom: 15px;
             font-size: 12px;
-            color: #222;
+            /* color: #222; */
         }
 
         p.center_contact {
@@ -111,8 +113,8 @@
 
         h1, h2, h3 {
             margin-top: 20px;
-            margin-bottom: 0;
-            color: #222;
+            margin-bottom: 10px;
+            /* color: #222; */
         }
 
         h1 {
@@ -127,9 +129,17 @@
             font-size: 16px;
         }
 
+        pre {
+            width: 80%;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: 30px;
+            margin-bottom: 30px;
+            font-size: 10px;
+        }
+
         a:link, a:visited {
-            color: #104E8B;
-            font-size: 16px;
+            color: #0e73d6;
             font-weight: bold;
             text-decoration: none;
         }
@@ -162,17 +172,26 @@
 
         section {
             clear: both;
-            margin-top: 30px;
+            margin-top: 50px;
         }
 
         section#blog {
             clear: both;
-            margin-top: 30px;
+            width: 550px;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: 50px;
         }
 
         section.post {
             font-size: 1em;
 
+        }
+
+        section#projects {
+            width: 550px;
+            margin-left: auto;
+            margin-right: auto;
         }
 
         img {
