--- a/demos/three.js_box.html
+++ b/demos/three.js_box.html
@@ -5,7 +5,7 @@
     <title>Three.js | Red Box</title>
 
     <!-- JS -->
-    <script src="/js/three.min.js"></script> 
+    <script src="js/three.min.js"></script> 
 </head>
 <body>
 <script>
