Fix minor typos and add aims to presentation

--- a/presentations/phd_idea_1-2013/index.html
+++ b/presentations/phd_idea_1-2013/index.html
@@ -152,7 +152,7 @@
 <body class="list">
 	<header class="caption">
         <h1>
-            Using Interesting-ness Measures to Drive System Configurations
+            Using Interestingness Measures to Drive System Configurations
             during Runtime
         </h1>
         <p>By Chris Choi and Tom Kelsey (University of St Andrews)</p>
@@ -161,7 +161,7 @@
 	<section class="slide cover" id="Cover">
         <div>
             <h2>
-                Using Interesting-ness Measures to Drive System Configurations
+                Using Interestingness Measures to Drive System Configurations
                 during Runtime
             </h2>
             <p class="authors">
@@ -173,7 +173,7 @@
 
 	<section class="slide">
         <div>
-            <h2>What are Interesting-ness Measures?</h2>
+            <h2>What are Interestingness Measures?</h2>
             <figure>
             <blockquote>
                 <p>Interestingness measures play an important role in
@@ -197,14 +197,14 @@
 
     <section class="slide">
         <div>
-            <h2>Applications of Interesting-ness Measures</h2>
+            <h2>Applications of Interestingness Measures</h2>
             <img src="imgs/im-application.jpg">
         </div>
     </section><!-- end of slide -->
 
     <section class="slide">
         <div>
-            <h2>Types of Interesting-ness Measures</h2>
+            <h2>Types of Interestingness Measures</h2>
             <img src="imgs/im-types.png">
         </div>
     </section><!-- end of slide -->
@@ -258,7 +258,7 @@
 
             <p>Subjective knowledge is represented using:</p>
             <ul>
-                <li>Predicate Formuale in the First-Order Logic</li>
+                <li>Predicate Formulas in the First-Order Logic</li>
                 <li>If-else rules</li>
             </ul>
         </div>
@@ -344,7 +344,7 @@
 
     <section class="slide">
         <div>
-            <h2>Cons:</h2>
+            <h2>Cons</h2>
             <h3>But there are also potential disadvantages:</h3>
             <ul>
                 <li>
@@ -362,6 +362,50 @@
                     would work</span>
                 </li>
 
+            </ul>
+        </div>
+    </section><!-- end of slide -->
+
+    <section class="slide">
+        <div>
+            <h2>Aims</h2>
+            <ul>
+                <li>
+                    Investigate how the measures can be useful in guiding a GA,
+                    <span class="bigger">and more . . .</span>
+                </li>
+                <li>
+                    Potentially a paper in <span class="bigger">Coordination
+                    Models, Languages and Applications. ACM Symposium on
+                    Applied Computing Conference 2014.</span>
+                </li>
+                <li>
+                    also . . .
+                </li>
+            </ul>
+        </div>
+    </section><!-- end of slide -->
+
+    <section class="slide">
+        <div>
+            <h2>Aims - Part 2</h2>
+            <p><span class="bigger">Additionally</span><p>
+            <h3>
+                AI Journal: Special Issue on Combining Constraint
+                Solving with Mining and Learning
+            </h3>
+            <ul>
+                <!-- <li> -->
+                <!--     <span class="bigger"> -->
+                <!--     </span> -->
+                <!-- </li> -->
+                <li>
+                    Aims to overlap <b>Constaints</b>, <b>Data Mining</b> and
+                    <b>Machine Learning</b> techniques
+                </li>
+                <li>
+                    Maybe it is something the Constraints Group is interested?
+                </li>
             </ul>
         </div>
     </section><!-- end of slide -->
@@ -398,7 +442,7 @@
                 <li>
                     [4] Vashishtha, Jyoti, Dharminder Kumar, and Saroj Ratnoo.
                     <i>
-                        "Revisiting Interestingness Measures for Knowledge 
+                        "Revisiting Interestingness Measures for Knowledge
                         Discovery in Databases."
                     </i>
                     Advanced Computing & Communication Technologies (ACCT),
