--- a/blog_html/121120-The_Need_For_A_More_Sophisticated_Humanoid_Robot_Foot.html
+++ b/blog_html/121120-The_Need_For_A_More_Sophisticated_Humanoid_Robot_Foot.html
@@ -242,7 +242,7 @@
     <nav>
         <ul>
             <li id="logo">
-                <a href="../index.html">Chris Choi</a>
+                <a href="../index.html">chris choi</a>
             </li>
             <li class="link">
                 <a href="../index.html">blog</a>
