--- a/blog_html/121122-Are_Data_Driven_Robots_the_Future?.html
+++ b/blog_html/121122-Are_Data_Driven_Robots_the_Future?.html
@@ -242,7 +242,7 @@
     <nav>
         <ul>
             <li id="logo">
-                <a href="../index.html">Chris Choi</a>
+                <a href="../index.html">chris choi</a>
             </li>
             <li class="link">
                 <a href="../index.html">blog</a>
