--- a/blog_html/121203-Problem_Querying_a_Sharded_MongoDB_Cluster_with_MongoDB_Java_Driver.html
+++ b/blog_html/121203-Problem_Querying_a_Sharded_MongoDB_Cluster_with_MongoDB_Java_Driver.html
@@ -242,7 +242,7 @@
     <nav>
         <ul>
             <li id="logo">
-                <a href="../index.html">Chris Choi</a>
+                <a href="../index.html">chris choi</a>
             </li>
             <li class="link">
                 <a href="../index.html">blog</a>
