--- a/blog_html/121205-what_is_MapReduce_or_How_does_MapReduce_work?.html
+++ b/blog_html/121205-what_is_MapReduce_or_How_does_MapReduce_work?.html
@@ -242,7 +242,7 @@
     <nav>
         <ul>
             <li id="logo">
-                <a href="../index.html">Chris Choi</a>
+                <a href="../index.html">chris choi</a>
             </li>
             <li class="link">
                 <a href="../index.html">blog</a>
