--- a/blog_html/121220-3D_Graphics_in_the_web_browser_with_WebGL.html
+++ b/blog_html/121220-3D_Graphics_in_the_web_browser_with_WebGL.html
@@ -242,7 +242,7 @@
     <nav>
         <ul>
             <li id="logo">
-                <a href="../index.html">Chris Choi</a>
+                <a href="../index.html">chris choi</a>
             </li>
             <li class="link">
                 <a href="../index.html">blog</a>
