--- a/blog_html/130216-My_First_Conference_in_1_months_time_-_ISGC_in_Taipei!.html
+++ b/blog_html/130216-My_First_Conference_in_1_months_time_-_ISGC_in_Taipei!.html
@@ -242,7 +242,7 @@
     <nav>
         <ul>
             <li id="logo">
-                <a href="../index.html">Chris Choi</a>
+                <a href="../index.html">chris choi</a>
             </li>
             <li class="link">
                 <a href="../index.html">blog</a>
