--- a/blog_html/130220-Why_are_we_still_using_CPUs_instead_of_GPUs?.html
+++ b/blog_html/130220-Why_are_we_still_using_CPUs_instead_of_GPUs?.html
@@ -242,7 +242,7 @@
     <nav>
         <ul>
             <li id="logo">
-                <a href="../index.html">Chris Choi</a>
+                <a href="../index.html">chris choi</a>
             </li>
             <li class="link">
                 <a href="../index.html">blog</a>
