--- a/blog_html/130820-Smart_Phone_Sensory_Data_Collector_with_HTML5_and_Javascript.html
+++ b/blog_html/130820-Smart_Phone_Sensory_Data_Collector_with_HTML5_and_Javascript.html
@@ -242,7 +242,7 @@
     <nav>
         <ul>
             <li id="logo">
-                <a href="../index.html">Chris Choi</a>
+                <a href="../index.html">chris choi</a>
             </li>
             <li class="link">
                 <a href="../index.html">blog</a>
