--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <title>Chris Choi - Projects</title>
+    <title>chris Choi | projects</title>
 
     <!-- CSS -->
     <style>
@@ -241,7 +241,7 @@
     <nav>
         <ul>
             <li id="logo">
-                <a href="./index.html">Chris Choi</a>
+                <a href="./index.html">chris choi</a>
             </li>
             <li class="link">
                 <a href="./index.html">blog</a>
