--- a/blog_html/121120-The_Need_For_A_More_Sophisticated_Humanoid_Robot_Foot.html
+++ b/blog_html/121120-The_Need_For_A_More_Sophisticated_Humanoid_Robot_Foot.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <title>Chris Choi</title>
+    <title>chris choi | blog post</title>
 
     <!-- CSS -->
     <style>
