--- a/blog_html/121122-Are_Data_Driven_Robots_the_Future?.html
+++ b/blog_html/121122-Are_Data_Driven_Robots_the_Future?.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <title>Chris Choi</title>
+    <title>chris choi | blog post</title>
 
     <!-- CSS -->
     <style>
