--- a/blog_html/121205-what_is_MapReduce_or_How_does_MapReduce_work?.html
+++ b/blog_html/121205-what_is_MapReduce_or_How_does_MapReduce_work?.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <title>Chris Choi</title>
+    <title>chris choi | blog post</title>
 
     <!-- CSS -->
     <style>
