--- a/blog_html/130216-My_First_Conference_in_1_months_time_-_ISGC_in_Taipei!.html
+++ b/blog_html/130216-My_First_Conference_in_1_months_time_-_ISGC_in_Taipei!.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <title>Chris Choi</title>
+    <title>chris choi | blog post</title>
 
     <!-- CSS -->
     <style>
