--- a/blog_html/130220-Why_are_we_still_using_CPUs_instead_of_GPUs?.html
+++ b/blog_html/130220-Why_are_we_still_using_CPUs_instead_of_GPUs?.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <title>Chris Choi</title>
+    <title>chris choi | blog post</title>
 
     <!-- CSS -->
     <style>
