--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
             width: 20%;
             margin-top: 2px;
             margin-right: 10px;
+            font-family: monospace;
             color: #777;
         }
 
