--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <title>chris Choi | projects</title>
+    <title>chris choi | projects</title>
 
     <!-- CSS -->
     <style>
